--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "request": "^2.88.0"
+    "axios": "^0.19.1",
+    "cheerio": "^1.0.0-rc.3"
   }
 }
